fix z-index text-slider

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -167,7 +167,7 @@ $desktop-width: 1024px;
 	position: relative;
 	.text-slider{
 		position: absolute;
-		z-index: 9999999;
+		z-index: 10;
 		left:10%;
 		top:30%;
 		.hero-description{
